--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -22,6 +22,10 @@
                 <%= f.text_field :phone_number, class: 'form-control' %>
             </div>
             <div class="form-group">
+                <%= f.label :contact_email %>
+                <%= f.text_field :contact_email, class: 'form-control' %>
+            </div>
+            <div class="form-group">
                 <%= f.label :description %>
                 <%= f.text_area :description, class: 'form-control' %>
             </div>
