Added form partial and edit action

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -4,7 +4,7 @@
         <h1 class="text-center">Create your profile</h1>
         <p>Be part of the Dev Match community and fill out your profile</p>
         <div class="well">
-           <% render 'form' %>
+           <%= render 'form' %>
         </div>
     </div>
     
