--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
 <div class ="row" >
  <div class ="col-md-8 col-md-offset-2">
          <ul class ="list-unstyled">
+             <h1 class="text-center">Dev Match Community</h1>
             <% @users.each do |user| %>
                 <% if user.profile %>
                 <li>
